add initial database models and service for player management - create Game class